--- a/Assets/styles/styles.css
+++ b/Assets/styles/styles.css
@@ -22,8 +22,23 @@
   --color-grey-6: #12181b;
   --box-shadow-1: 0 3px 15px rgba(0,0,0,.5);
   --br-sm: 0.8rem
-
 ;
+}
+
+.light-mode {
+  --color-primary: #FFFFFF;
+  --color-secondary: #FF2E63;
+  --color-red: #08D9D6;
+  --color-white: #333333;
+  --color-black: #000000;
+  --color-grey: #EAEAEA;
+  --color-grey0: #f8f8f8;
+  --color-grey-1: #454e56;
+  --color-grey-2: #EAEAEA;
+  --color-grey-3: #DEE4E7;
+  --color-grey-4: #b2becd;
+  --color-grey-5: #2a2e35;
+  --color-grey-6: #12181b;
 }
 
 body {
@@ -950,6 +965,7 @@ section.contact::before {
   color: var(--color-primary);
   border: none;
   outline: none;
+  background-color: var(--color-white);
   border-bottom: 1px solid var(--color-primary);
 }
 
@@ -959,7 +975,7 @@ section.contact::before {
   font-size: 12px;
   font-weight: 500;
   letter-spacing: 1px;
-  color: var(--color-primary);
+  color: var(--color-secondary);
 }
 
 .container-con .container .contactForm .formBox .inputBox span {
