--- a/Assets/styles/styles.scss
+++ b/Assets/styles/styles.scss
@@ -20,7 +20,21 @@
     --color-grey-6: #12181b;
     --box-shadow-1: 0 3px 15px rgba(0,0,0,.5);
     --br-sm: 0.8rem
-
+}
+.light-mode{
+    --color-primary: #FFFFFF;
+    --color-secondary: #FF2E63;
+    --color-red: #08D9D6;
+    --color-white: #333333;
+    --color-black: #000000;
+    --color-grey: #EAEAEA;
+    --color-grey0: #f8f8f8;
+    --color-grey-1: #454e56;
+    --color-grey-2: #EAEAEA;
+    --color-grey-3: #DEE4E7;
+    --color-grey-4: #b2becd;
+    --color-grey-5: #2a2e35;
+    --color-grey-6: #12181b;
 }
 body{
     background-color: var(--color-primary);
@@ -659,13 +673,14 @@ section.contact::before{
                         color: var(--color-primary);
                         border: none;
                         outline: none;
+                        background-color: var(--color-white);
                         border-bottom: 1px solid var(--color-primary);
                         &:focus ~ span, :valid ~ span{
                             transform: translateY(-20px);
                             font-size: 12px;
                             font-weight: 500;
                             letter-spacing: 1px;
-                            color: var(--color-primary); 
+                            color: var(--color-secondary); 
                         }
                     }
                     span{
